--- a/M01-Introducción_al_Machine_Learning/M1U3-Librerías_numéricas_de_Python_y_Scikit-learn/M1U3-2-Ejercicios_librerías.ipynb
+++ b/M01-Introducción_al_Machine_Learning/M1U3-Librerías_numéricas_de_Python_y_Scikit-learn/M1U3-2-Ejercicios_librerías.ipynb
@@ -902,25 +902,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
-        "id": "di4ma8BAmG-c",
-        "outputId": "5ae7be13-fa3a-4277-8984-5df596d37700",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "di4ma8BAmG-c",
+        "outputId": "84fb7b65-6860-48bb-838c-6a9034a5df57"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/Machine.Learning\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'hskfjghsfoguiwshrls' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-76221e16fd20>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhskfjghsfoguiwshrls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'hskfjghsfoguiwshrls' is not defined"
           ]
         }
       ],
       "source": [
-        "%cd Machine.Learning\n"
+        "hskfjghsfoguiwshrls\n"
       ]
     },
     {
