--- a/plot_ols_modificado.ipynb
+++ b/plot_ols_modificado.ipynb
@@ -31,14 +31,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 479
         },
         "id": "6HkNkHmEiE3z",
-        "outputId": "c5ed9de2-5c67-4103-f8ae-bbe9914c2b2b"
+        "outputId": "c107d890-82ee-4f02-9ea6-eb3226c4a801"
       },
       "outputs": [
         {
@@ -127,27 +127,48 @@
       "cell_type": "code",
       "source": [
         "# Usamos la tercera característica (por ejemplo)\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 2]\n"
+        "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 3]\n"
+      ],
+      "metadata": {
+        "id": "x2ecVaT7gSPZ"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import Ridge\n",
+        "\n",
+        "# Se crea el modelo de regresión Ridge\n",
+        "ridge_regr = Ridge(alpha=1.0)\n",
+        "\n",
+        "# Se entrena el modelo Ridge\n",
+        "ridge_regr.fit(diabetes_X_train, diabetes_y_train)\n",
+        "\n",
+        "# Se hace predicciones con Ridge\n",
+        "ridge_y_pred = ridge_regr.predict(diabetes_X_test)\n",
+        "\n",
+        "# Comparo los resultados\n",
+        "print(f\"Ridge Mean Squared Error: {mean_squared_error(diabetes_y_test, ridge_y_pred):.2f}\")\n",
+        "print(f\"Ridge R² Score: {r2_score(diabetes_y_test, ridge_y_pred):.2f}\")\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "x2ecVaT7gSPZ",
-        "outputId": "2cd26354-9613-4e06-d6a3-1a27b97dd90b"
+        "id": "zkIYjkEWih7S",
+        "outputId": "b1f2043d-53da-4c81-9ab8-085c1dedd307"
       },
-      "execution_count": 31,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "index 2 is out of bounds for axis 1 with size 1",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-87ed289ca8c3>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Usamos la tercera característica (por ejemplo)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdiabetes_X\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiabetes_X\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 1 with size 1"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ridge Mean Squared Error: 3604.27\n",
+            "Ridge R² Score: 0.25\n"
           ]
         }
       ]
