--- a/plot_ols_modificado.ipynb
+++ b/plot_ols_modificado.ipynb
@@ -115,7 +115,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Cambiar la característica del dataset de diabetes##\n",
+        "##Cambiar la característica del dataset de diabetes\n",
         "\n",
         "En el tutorial se usa una sola caracteristica del dataset de diabetes. Cambiare la caracteristica para ver como afecta"
       ],
@@ -176,7 +176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##A. Otro ejercicio Cambiando el dataset##\n",
+        "##A. Otro ejercicio Cambiando el dataset\n",
         "\n",
         "Utilizaré un conjunto de datos diferente para ver como afecta al resultado. En lugar del dataset diabetes, probaré con otro dataset de sklearn, como el California Housing dataset:"
       ],
@@ -331,7 +331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Metricas de evaluación##\n",
+        "##Metricas de evaluación\n",
         "\n",
         "Ademas de MSE y R^2 voy a añadir RMSE(Root Mean Squared Error) para obtener otra perspectiva del error del modelo"
       ],
@@ -402,7 +402,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##B. Probando otra cosa##\n",
+        "##B. Probando otra cosa\n",
         "\n",
         "1. Creamos datos de ejemplo, generando algunos puntos aleatorios con una tendencia lineal\n",
         "2. Dividimos el conjunto de datos en entrenamiento y prueba\n",
